--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "axios-auth-refresh": "^3.3.6",
     "bootstrap": "^5.3.3",
     "oauth-pkce": "^0.0.6",
+    "popper": "^1.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
