--- a/backend/Ballerina.toml
+++ b/backend/Ballerina.toml
@@ -1,7 +1,7 @@
 [package]
 org = "choreo"
-name = "echo_service"
-distribution = "2201.8.5"
+name = "lotto"
+distribution = "2201.8.6"
 version = "3.1.1"
 
 [build-options]
