--- a/backend/Dependencies.toml
+++ b/backend/Dependencies.toml
@@ -5,7 +5,7 @@
 
 [ballerina]
 dependencies-toml-version = "2"
-distribution-version = "2201.8.5"
+distribution-version = "2201.8.6"
 
 [[package]]
 org = "ballerina"
@@ -33,7 +33,7 @@ dependencies = [
 [[package]]
 org = "ballerina"
 name = "constraint"
-version = "1.4.0"
+version = "1.5.0"
 dependencies = [
 	{org = "ballerina", name = "jballerina.java"}
 ]
@@ -41,7 +41,7 @@ dependencies = [
 [[package]]
 org = "ballerina"
 name = "crypto"
-version = "2.5.0"
+version = "2.6.2"
 dependencies = [
 	{org = "ballerina", name = "jballerina.java"},
 	{org = "ballerina", name = "time"}
@@ -61,7 +61,7 @@ dependencies = [
 [[package]]
 org = "ballerina"
 name = "http"
-version = "2.10.8"
+version = "2.10.11"
 dependencies = [
 	{org = "ballerina", name = "auth"},
 	{org = "ballerina", name = "cache"},
@@ -310,7 +310,7 @@ modules = [
 
 [[package]]
 org = "choreo"
-name = "echo_service"
+name = "lotto"
 version = "3.1.1"
 dependencies = [
 	{org = "ballerina", name = "http"},
@@ -320,8 +320,9 @@ dependencies = [
 	{org = "ballerinai", name = "observe"}
 ]
 modules = [
-	{org = "choreo", packageName = "echo_service", moduleName = "echo_service"},
-	{org = "choreo", packageName = "echo_service", moduleName = "echo_service.auth"},
-	{org = "choreo", packageName = "echo_service", moduleName = "echo_service.util"}
+	{org = "choreo", packageName = "lotto", moduleName = "lotto"},
+	{org = "choreo", packageName = "lotto", moduleName = "lotto.auth"},
+	{org = "choreo", packageName = "lotto", moduleName = "lotto.conf"},
+	{org = "choreo", packageName = "lotto", moduleName = "lotto.util"}
 ]
 
